# filterdns

./: CMakeLists.txt
src/: main.cpp
src/parser/: parser.cpp  parser.h
src/server/: server.cpp  server.h
src/utils/: debugger.cpp  debugger.h  parser.cpp  parser.h
test/: bin  bitsize.cpp  conv.c  dnsheader.cpp  dnsheaderread.cpp  formathost.c  readdnsr.cpp  sample.example.com  short.c  udpsenddns.c
